Bug 319391 - ER diagram issues - umbrello is failing to move widgets (entities), duplicating text & relations
Summary: ER diagram issues - umbrello is failing to move widgets (entities), duplicati...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Steyn
URL: https://dl.dropboxusercontent.com/u/1...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-06 03:41 UTC by sainthyoga2003
Modified: 2013-11-12 21:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments
Fix multiple association widgets for single foreign key constraint (910 bytes, patch)
2013-09-29 09:55 UTC, Joris Steyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sainthyoga2003 2013-05-06 03:41:21 UTC
designing a relational model from a database, umbrello is multiplying fk texts, duplicating relations and is not allowing to move many entities widgets.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. open xmi file with relational model
3. trying to move any entity
Actual Results:  
foregin keys text multiplied in the diagram.
duplicated relations between entities.
entities cannot be dropped

Expected Results:  
foreign keys text showed each one at side of each correspondient entity
only one relation between each entity
can drop any entity

umbrello version 2.8.5
Kubuntu 12.04 x64
Comment 1 Joris Steyn 2013-09-29 09:55:10 UTC
Created attachment 82536 [details]
Fix multiple association widgets for single foreign key constraint

Association labels and lines for foreign keys were duplicated each time an
entity constraint was saved. This was due to 'findAssocWidget' using the wrong
entity to find the association (i.e. the entity not holding the constraint attribute).
    
Some history (not all that relevant now):
This mixup between role A and B for foreign keys was introduced when fixing
bug 171280. That bug was fixed by switching A/B, while maybe a better fix would
have been to simple render the crowfoot on the other side of the relation. I
think the ideal fix would be to revert that change, but that would mean to
break all exported ERD's between then and now.

BUG: 319391
BUG: 122304

And we could as well close: 171280
Comment 2 Andi Fischer 2013-09-29 12:20:57 UTC
Git commit 0c696384d1262731356ac076c4bd96a50d271f75 by Andi Fischer, on behalf of Joris Steyn.
Committed on 29/09/2013 at 12:09.
Pushed by fischer into branch 'master'.

Fix multiple association widgets for single foreign key constraint.

Association labels and lines for foreign keys were duplicated each time an
entity constraint was saved. This was due to 'findAssocWidget' using the wrong
entity to find the association (i.e. the entity not holding the constraint
attribute).
Related: bug 122304

M  +2    -2    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/0c696384d1262731356ac076c4bd96a50d271f75
Comment 3 Ralf Habacker 2013-10-06 12:21:08 UTC
Git commit 4fd0e85f6470d35827aef0003e600f6e5a161238 by Ralf Habacker, on behalf of Joris Steyn.
Committed on 29/09/2013 at 12:09.
Pushed by habacker into branch 'KDE/4.11'.

Fix multiple association widgets for single foreign key constraint.

Association labels and lines for foreign keys were duplicated each time an
entity constraint was saved. This was due to 'findAssocWidget' using the wrong
entity to find the association (i.e. the entity not holding the constraint
attribute).
Related: bug 122304
FIXED-IN:4.11.3

M  +2    -2    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/4fd0e85f6470d35827aef0003e600f6e5a161238