Fix multiple association widgets for single foreign key constraint.

Association labels and lines for foreign keys were duplicated each time an
entity constraint was saved. This was due to 'findAssocWidget' using the wrong
entity to find the association (i.e. the entity not holding the constraint
attribute).

BUG: 319391
BUG: 122304